# storage

./: README.md
storage/: CMakeLists.txt  command.cpp  command.h  exeption.cpp  file.cpp  function_for_currect_data.cpp  location.cpp  location.h  main.cpp  product.cpp  product.h  product.txt  product1.txt  storage.cpp  storage.h  tempCodeRunnerFile.cpp
storage/StorageUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
storage/backend/: CMakeLists.txt
storage/backend/include/: command.h  location.h
storage/backend/src/: command.cpp  file.cpp  main.cpp
